--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -59,7 +59,7 @@
 
 
     <ListView
-        android:id="@+id/products"
+        android:id="@+id/notes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
